# Proyecto1

./: AdministradorAlmacenamiento.cpp  AdministradorAlmacenamiento.h  Articulo.cpp  Articulo.h  Biblioteca.cpp  Biblioteca.h  CMakeLists.txt  Excepciones.cpp  Excepciones.h  Libro.cpp  Libro.h  Lista.cpp  Lista.h  Material.cpp  Material.h  Menu.cpp  Menu.h  Nodo.cpp  Nodo.h  Revista.cpp  Revista.h  Usuario.cpp  Usuario.h  Utilities.h  Video.cpp  Video.h  main.cpp  materialDigital.cpp  materialDigital.h
